feat(sidebar): Enhance sidebar functionality and user experience with new features and updates

--- a/docs/changelogs/v0.2.0.md
+++ b/docs/changelogs/v0.2.0.md
@@ -4,15 +4,17 @@
 
 ### Added
 - **Sidebar View for Browsing All Notes** (GitHub Issue #9)
-  - Tree view in Explorer sidebar showing all notes across workspace
+  - Dedicated Activity Bar icon for Code Notes (standalone sidebar, not in Explorer)
+  - Tree view showing all notes across workspace
   - Notes organized by file with collapsible file nodes
   - File nodes display relative path and note count (e.g., "src/extension.ts (3)")
   - Note nodes show line number, preview text (50 chars), and author name
   - Click on note to navigate directly to location in editor
   - Real-time updates when notes are created, edited, or deleted
+  - **"+" button in sidebar toolbar** for quick note creation without text selection
+  - Refresh button in sidebar title bar
   - Context menu actions: Go to Note, Edit, Delete, View History
   - Empty state with "Add Your First Note" action for new users
-  - Refresh button in sidebar title bar
   - Collapse All command for managing large note collections
   - Total note count displayed in sidebar title
   - Lazy loading for optimal performance with many notes
@@ -20,6 +22,11 @@
   - Works seamlessly with multi-note feature (multiple notes per line)
 
 ### Changed
+- **Add Note command now works without text selection**
+  - If text is selected: creates note for selected lines (original behavior)
+  - If no selection: creates note for current cursor line (new behavior)
+  - Keyboard shortcut (`Ctrl+Alt+N` / `Cmd+Alt+N`) no longer requires selection
+  - More convenient for quick note-taking
 - NoteManager now provides workspace-wide query methods
   - `getAllNotes()` - Get all notes across workspace
   - `getNotesByFile()` - Get notes grouped by file
@@ -32,9 +39,12 @@
 - Created `NotesSidebarProvider` implementing VSCode TreeDataProvider
 - Created `NoteTreeItem` classes for tree structure (RootNode, FileNode, NoteNode)
 - Added sidebar view contribution to package.json (`codeContextNotes.sidebarView`)
+- Added `viewsContainers` contribution for dedicated Activity Bar icon
 - Implemented lazy loading and caching for performance with large note collections
 - Added debouncing (300ms) for sidebar refresh operations
 - New commands: `openNoteFromSidebar`, `refreshSidebar`
+- Added `view/title` menu contributions for "+" and refresh buttons in sidebar toolbar
+- Updated `addNote` command logic to handle both selection and cursor-only scenarios
 - Context menus for file and note nodes with quick actions
 - Markdown stripping from note previews for cleaner display
 - Configuration options: `sidebar.sortBy`, `sidebar.previewLength`, `sidebar.autoExpand`
