--- a/docs/changelogs/v0.2.0.md
+++ b/docs/changelogs/v0.2.0.md
@@ -12,13 +12,16 @@
   - Click on note to navigate directly to location in editor
   - Real-time updates when notes are created, edited, or deleted
   - **"+" button in sidebar toolbar** for quick note creation without text selection
+  - **Collapse All button** in sidebar toolbar to reset tree to default collapsed state
   - Refresh button in sidebar title bar
-  - Context menu actions: Go to Note, Edit, Delete, View History
+  - **Context menu for Note items**: Go to Note, Edit Note, Delete Note, View History
+  - **Context menu for File items**: Open File
   - Empty state with "Add Your First Note" action for new users
-  - Collapse All command for managing large note collections
   - Total note count displayed in sidebar title
   - Lazy loading for optimal performance with many notes
-  - Configurable preview length and auto-expand behavior
+  - **Configurable sorting**: Sort by file path (default), date (most recent first), or author name
+  - Configurable preview length (20-200 chars, default 50)
+  - Configurable auto-expand behavior (default collapsed)
   - Works seamlessly with multi-note feature (multiple notes per line)
 
 ### Changed
@@ -42,10 +45,18 @@
 - Added `viewsContainers` contribution for dedicated Activity Bar icon
 - Implemented lazy loading and caching for performance with large note collections
 - Added debouncing (300ms) for sidebar refresh operations
-- New commands: `openNoteFromSidebar`, `refreshSidebar`
-- Added `view/title` menu contributions for "+" and refresh buttons in sidebar toolbar
+- **New commands**:
+  - `openNoteFromSidebar` - Navigate to note and focus thread
+  - `refreshSidebar` - Manual refresh trigger
+  - `collapseAll` - Collapse all tree nodes
+  - `editNoteFromSidebar` - Edit note from context menu
+  - `deleteNoteFromSidebar` - Delete note from context menu
+  - `viewNoteHistoryFromSidebar` - View note history from context menu
+  - `openFileFromSidebar` - Open file from context menu
+- Added `view/title` menu contributions for "+", collapse all, and refresh buttons
+- Added `view/item/context` menu contributions for note and file items
 - Updated `addNote` command logic to handle both selection and cursor-only scenarios
-- Context menus for file and note nodes with quick actions
+- **Implemented sorting logic** with switch between file/date/author modes
 - Markdown stripping from note previews for cleaner display
 - Configuration options: `sidebar.sortBy`, `sidebar.previewLength`, `sidebar.autoExpand`
 
